--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 					<button class="btn btn-primary w-100" onclick="getJoke();">New Joke</button>
 				</div>
 			</div>
-			<div class="mt-5">
-				<small>Developed by <a href="https://robertd.co.uk">Robert Dixon</a>.</small>
-			</div>
+			<p>Developed by <a href="https://robertd.co.uk">Robert Dixon</a></p>
 		</div>
 		<script src="js/script.js"></script>
 	</body>
